<resources>
    <string name="app_name">teebay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="register">REGISTER</string>
    <string name="signin">Signin</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="my_product">My Product</string>
    <string name="all_product">All Product</string>
    <string name="logout">Logout</string>
    <string name="add_product">add product</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="select_title_of_your_product">Select title of your product</string>
    <string name="select_category">Select Category</string>
    <string name="select_description">Select Description</string>
    <string name="description">Description</string>
    <string name="select_price">Select Price</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="rent">Rent</string>
    <string name="rent_price">Rent Price</string>
    <string name="select_option">Select Option</string>
    <string name="summary">Summary</string>
    <string name="upload_product_picture">Upload Product Picture</string>
    <string name="upload_picture_camera">Take picture using camera</string>
    <string name="upload_picture_gallery">Upload picture from device</string>
    <string name="submit">Submit</string>
    <string name="buy">Buy</string>
    <string name="category">Category:</string>
    <string name="purchase_price_colon">Purchase price:</string>
    <string name="rent_colon">Rent:</string>
    <string name="posted_on">Posted on</string>
    <string name="product_image">product image</string>
    <string name="from">From</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="to">To</string>
    <string name="update_product">Update Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="title">Title</string>
    <string name="rent_option">Rent Option</string>
    <string name="rent_option_display">(%1$s)</string>
    <string name="upload_image">Upload Image</string>
    <string name="wait_until_making_this_request">Wait until making this request</string>
    <string name="my_orders">My Orders</string>
    <string name="purchased">Purchased</string>
    <string name="no_product_found">No Product Found!!</string>
</resources>