<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.myProduct.view.PriceInputFragment"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_price"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/purchase_price">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rent"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/rent_price">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp">
    <AutoCompleteTextView
        android:id="@+id/ddOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="none"
        android:text="@string/select_option"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>