<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.editProduct.view.EditProductFragment">

    <ScrollView
        android:id="@+id/main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/select_category">
                <AutoCompleteTextView
                    android:id="@+id/ddCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_marginTop="@dimen/_6sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="8"
                    android:maxLines="30"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/upload_image"
                app:cornerRadius="@dimen/_6sdp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_60sdp"
                android:contentDescription="@string/upload_image"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/purchase_price">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/rent_price">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/rent_option">
                <AutoCompleteTextView
                    android:id="@+id/ddOptions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnUpdate"
        android:text="@string/delete_product"
        android:backgroundTint="@color/red"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_6sdp"/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/update_product"
        android:backgroundTint="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_6sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>