<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.productDetails.ProductDetailsFragment">

    <ScrollView
        android:id="@+id/main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_title_of_your_product"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_6sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_price_colon"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/tvPurchasePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_6sdp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rent_colon"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/tvRentPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp"
                    android:paddingStart="@dimen/_6sdp"/>
                <TextView
                    android:id="@+id/tvRentOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_4sdp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_6sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posted_on"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp"
                    android:paddingHorizontal="@dimen/_6sdp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRent"
        android:text="@string/buy"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_6sdp"/>

    <Button
        android:id="@+id/btnRent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBuy"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rent"
        android:textSize="@dimen/_12sdp"
        android:layout_margin="@dimen/_6sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>