<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.myProduct.view.ImageInputFragment"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_product_picture"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnCameraUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_picture_camera"
        android:paddingHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnGalleryUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_picture_gallery"
        android:paddingHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:contentDescription="@string/upload_product_picture"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_gravity="center" />

</LinearLayout>