<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/from"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fromDate"
        app:layout_constraintTop_toBottomOf="@+id/tvFrom"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dd_mm_yyyy">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFromDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fromDate"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/to"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/toDate"
        app:layout_constraintTop_toBottomOf="@+id/tvTo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dd_mm_yyyy">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etToDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>